2001-04-18  Stanislav Brabec  <utx@penguin.cz>

	* gnome-terminal.c, gnome-terminal.glade, gnome-terminal.glade.h:
	Added support for del_is_del zvt feature in configuration. Changed
	string "DEL" to "Delete" to make difference between character code
	and key.

	Ported from stable branch, after discussion with George Lebl.

2001-04-02  Stanislav Brabec  <utx@penguin.cz> 

        * gnome-terminal.c: Allow i18n for default window title when
        saving session. Otherwise terminal is restored with english
        title. Also caused problems with restoring session.

Mon Mar 12 15:31:03 2001  George Lebl <jirka@5z.com>

	* gnome-terminal.desktop:  Add DocPath

2001-02-14  Christophe Merlet  <redfox@eikonex.org>

	* gnome-terminal.c: Marqued string for translation.

2001-01-16  jacob berkman  <jacob@ximian.com>

	* gnome-terminal.glade: cosmetic improvements

	* gnome-terminal.c (new_terminal_cmd): switch the args to
	_set_wmclass(), as they were not being set correctly.

2001-01-12  Miguel de Icaza  <miguel@ximian.com>

	* gnome-terminal.1: Include manual page for the gnome terminal.
	
	* Makefile.am (EXTRA_DIST): Distribute documentation.

	* gnome-terminal.c: Rename --scroll and --noscroll to --bgscroll
	and --bgnoscroll

2000-06-03  Matt Bissiri  <bissiri@eecs.umich.edu>

	* gnome-terminal.glade, gnome-terminal.glade.h: New files.  

	* gnome-terminal.c (preferences_cmd): Use gnome-terminal.glade
	instead of hardcoding the preferences dialog.
	(aligned_label): Removed this function, no longer needed.
	(create_option_menu_data, create_option_menu): Add option menu
	argument, because option menu widget is created by libglade now.
	(terminal_kill): Fix warning.
	(main): Add glade_gnome_init ()

	* Makefile.am: Add gnome-terminal.glade, gnome-terminal.glade.h,
	and libglade support.


2000-08-04 Hans-Andreas Engel  <Hans-A.Engel@unibas.ch>

        * gnome-terminal.c: Added command line options for choosing